Fix notification z-index (#9)

--- a/src/styles/_notifications.scss
+++ b/src/styles/_notifications.scss
@@ -37,7 +37,7 @@
   padding: $base-margin;
   height: 100%;
   max-height: 100%;
-  z-index: 16777271;
+  z-index: 16777272;
 
   & > .osjs-notification {
     padding: $base-margin;
